# openGL

./: README.md
OpenGL_Study/week1/: CMakeLists.txt  manual.txt
OpenGL_Study/week1/00_exe/: 02_window.md
OpenGL_Study/week1/00_exe/source/: basic.frag  basic.vert  main.cpp
OpenGL_Study/week1/01_dev_env/: 01_dev_env.md  CMakeLists.txt
OpenGL_Study/week1/01_dev_env/00_exe/: 03_triangle.md
OpenGL_Study/week1/02_window/: CMakeLists.txt
OpenGL_Study/week1/02_window/source/: glad.c  main.cpp
OpenGL_Study/week1/03_triangle/: CMakeLists.txt  GLFWwindow.cpp  basic.vert  main.cpp  tmp.cpp
OpenGL_Study/week1/04_uniform/: 04_uniform.md  CMakeLists.txt
OpenGL_Study/week1/04_uniform/source/: main.cpp
OpenGL_Study/week1/05_texture/: 05_texture.md  CMakeLists.txt
OpenGL_Study/week1/05_texture/include/glad/: glad.h
OpenGL_Study/week1/05_texture/source/: basic.frag  basic.vert  glad.c  main.cpp
